[package]
name = "kb-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", rev = "2245b7ada826d159aabb1f16291115dd54d790b7" }
notify-rust = "4.5"
